# trans-epub

./: .env.example  .gitignore  COST_ANALYSIS.md  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  test.yml
.trans-epub/: config.example.toml  glossary.example.toml
docs/: architecture.md  engines.md
stubs/ebooklib/: __init__.pyi  epub.pyi
tests/: The Lovely Bones - Alice Sebold.epub.test  __init__.py  conftest.py  test_all.py  test_batch_fallback.py  test_cli.py  test_config.py  test_core.py  test_creativity.py  test_engines.py  test_epub_translator.py  test_html_translator.py  test_inline_spacing.py  test_preserve_markup.py  test_retries.py  test_toc.py  test_translate_toc.py  test_utils.py
trans_epub/: __init__.py  cli.py  config.py  epub_translator.py  glossary.py  html_translator.py  toc.py
trans_epub/engines/: __init__.py  alibaba.py  azure.py  base.py  deepl.py  deepseek.py  gemini.py  google.py
