[project]
name = "trans-epub"
version = "1.1.0"
description = "Translate EPUB books from English to Vietnamese using various AI engines"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{name = "fonger900", email = "fonger900@gmail.com"}]
keywords = ["epub", "translation", "ai", "nlp", "book", "ebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Internationalization",
    "Environment :: Console",
    "Natural Language :: Vietnamese",
]

urls = {
    "Homepage" = "https://github.com/fonger900/trans-epub",
    "Repository" = "https://github.com/fonger900/trans-epub",
}

dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "rich>=13",
    "tomli>=2.0.1; python_version < '3.11'",  # For TOML support in older Python versions
]

[project.scripts]
trans-epub = "trans_epub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
