[project]
name = "trans-epub"
version = "1.3.0"
description = "Translate EPUB books from English to Vietnamese using various AI engines"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Phong Dinh", email = "fonger900@gmail.com"}]
keywords = ["epub", "translation", "ai", "nlp", "book", "ebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Internationalization",
    "Environment :: Console",
    "Natural Language :: Vietnamese",
]

dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "rich>=13",

]

[project.scripts]
trans-epub = "trans_epub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
